@@ -19,6 +19,7 @@
         cloudi_proplists,
         cloudi_response,
         cloudi_service,
+        cloudi_service_api,
         cloudi_services_external,
         cloudi_services_external_sup,
         cloudi_services_internal,
