@@ -1,0 +1,87 @@
+%%% -*- coding: utf-8; Mode: erlang; tab-width: 4; c-basic-offset: 4; indent-tabs-mode: nil -*-
+%%% ex: set softtabstop=4 tabstop=4 shiftwidth=4 expandtab fileencoding=utf-8:
+%%%
+%%%------------------------------------------------------------------------
+%%%
+%%% BSD LICENSE
+%%% 
+%%% Copyright (c) 2009-2013, Michael Truog <mjtruog at gmail dot com>
+%%% All rights reserved.
+%%% 
+%%% Redistribution and use in source and binary forms, with or without
+%%% modification, are permitted provided that the following conditions are met:
+%%% 
+%%%     * Redistributions of source code must retain the above copyright
+%%%       notice, this list of conditions and the following disclaimer.
+%%%     * Redistributions in binary form must reproduce the above copyright
+%%%       notice, this list of conditions and the following disclaimer in
+%%%       the documentation and/or other materials provided with the
+%%%       distribution.
+%%%     * All advertising materials mentioning features or use of this
+%%%       software must display the following acknowledgment:
+%%%         This product includes software developed by Michael Truog
+%%%     * The name of the author may not be used to endorse or promote
+%%%       products derived from this software without specific prior
+%%%       written permission
+%%% 
+%%% THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND
+%%% CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES,
+%%% INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
+%%% OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+%%% DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR
+%%% CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+%%% SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING,
+%%% BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+%%% SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+%%% INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+%%% WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+%%% NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
+%%% OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
+%%% DAMAGE.
+%%%
+%%%------------------------------------------------------------------------
+
+% internal service parameters
+% (same as the config_service_internal record, but the order is significant
+%  since it is used within all configuration data)
+-record(internal,
+    {
+        prefix             :: string(),
+        module             :: atom() | file:filename(),
+        args               :: list(),
+        dest_refresh       :: cloudi_service_api:dest_refresh(),
+        timeout_init       :: cloudi_service_api:timeout_milliseconds(),
+        timeout_async      :: cloudi_service_api:timeout_milliseconds(),
+        timeout_sync       :: cloudi_service_api:timeout_milliseconds(),
+        dest_list_deny     :: cloudi_service_api:dest_list(),
+        dest_list_allow    :: cloudi_service_api:dest_list(),
+        count_process      :: pos_integer(),
+        max_r              :: non_neg_integer(),
+        max_t              :: cloudi_service_api:seconds(),
+        options            :: cloudi_service_api:service_options_internal()
+    }).
+    
+% external service parameters
+% (same as the config_service_external record, but the order is significant
+%  since it is used within all configuration data)
+-record(external,
+    {
+        prefix             :: string(),
+        file_path          :: string(),
+        args               :: string(),
+        env                :: list({string(), string()}),
+        dest_refresh       :: cloudi_service_api:dest_refresh(),
+        protocol           :: 'default' | 'local' | 'tcp' | 'udp',
+        buffer_size        :: pos_integer(),
+        timeout_init       :: cloudi_service_api:timeout_milliseconds(),
+        timeout_async      :: cloudi_service_api:timeout_milliseconds(),
+        timeout_sync       :: cloudi_service_api:timeout_milliseconds(),
+        dest_list_deny     :: cloudi_service_api:dest_list(),
+        dest_list_allow    :: cloudi_service_api:dest_list(),
+        count_process      :: pos_integer(),
+        count_thread       :: pos_integer(),
+        max_r              :: non_neg_integer(),
+        max_t              :: cloudi_service_api:seconds(),
+        options            :: cloudi_service_api:service_options_external()
+    }).
+
